# rust-chorale

./: .gitignore  AGENTS.md  CHANGELOG.md  CONVENTIONS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  overnight-report-2026-06-05-impl-batch-2-continuation.md  overnight-report-2026-06-05-qa-bugs-round-2.md  overnight-report-2026-06-05-session2.md  overnight-report-2026-06-05.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  claude-review.yml  commit-lint.yml  deploy-pages.yml
chorale-core/: Cargo.toml
chorale-core/src/: clipboard.rs  column.rs  error.rs  labels.rs  lib.rs  range.rs  state.rs  theme.rs  transitions.rs  types.rs  views.rs  xlsx.rs
chorale-derive/: Cargo.toml
chorale-derive/src/: lib.rs
chorale-derive/tests/: derive_tests.rs
chorale-dioxus/: Cargo.toml
chorale-dioxus/src/: components.rs  hooks.rs  lib.rs
chorale-leptos/: Cargo.toml
chorale-leptos/src/: components.rs  hooks.rs  lib.rs
docs/: BRANCH_PROTECTION_SETUP.md  CONVENTIONS.md  QA.md  keyboard-navigation.md  landing-index.html  perf-2026-06-04-fine-grained-reactivity.md
docs/recon/: 2026-06-04-item-10-frozen-columns.md  2026-06-04-item-11-0a-multi-column-sort.md  2026-06-04-item-11-0b-infinite-scroll.md  2026-06-04-item-11-0c-overridable-labels.md  2026-06-04-item-11-0d-chorale-derive.md  2026-06-04-item-11-5-chorale-leptos.md  2026-06-04-item-11-selection-toolbar-slot.md  2026-06-04-item-6-variable-row-height-virt.md  2026-06-04-item-7-in-cell-editing.md  2026-06-04-item-8-grouping-aggregation.md  2026-06-04-item-9-column-reorder.md  2026-06-05-item-15-active-cell-keyboard-nav.md  2026-06-05-item-16-excel-range-selection.md  2026-06-05-item-17-clipboard-copy-paste.md  2026-06-05-item-18-xlsx-export.md
examples/basic/: Cargo.toml  Dioxus.toml
examples/basic/src/: main.rs
examples/leptos-basic/: Cargo.toml  README.md  index.html
examples/leptos-basic/src/: main.rs
examples/leptos-qa-harness/: Cargo.toml  README.md  index.html
examples/leptos-qa-harness/src/: main.rs
examples/leptos-virtualized-10k-rows/: Cargo.toml  README.md  index.html
examples/leptos-virtualized-10k-rows/src/: main.rs
examples/leptos-virtualized-1m-rows/: Cargo.toml  README.md  index.html
examples/leptos-virtualized-1m-rows/src/: main.rs
examples/leptos-with-column-resize/: Cargo.toml  README.md  index.html
examples/leptos-with-column-resize/src/: main.rs
examples/leptos-with-custom-cells/: Cargo.toml  README.md  index.html
examples/leptos-with-custom-cells/src/: main.rs
examples/leptos-with-selection/: Cargo.toml  README.md  index.html
examples/leptos-with-selection/src/: main.rs
examples/nested-collapse-qa/: Cargo.toml  Dioxus.toml
examples/nested-collapse-qa/src/: main.rs
examples/qa-harness/: Cargo.toml  Dioxus.toml
examples/qa-harness/src/: main.rs
examples/virtualized-10k-rows/: Cargo.toml  Dioxus.toml
examples/virtualized-10k-rows/src/: main.rs
examples/virtualized-1m-rows/: Cargo.toml  Dioxus.toml
examples/virtualized-1m-rows/src/: main.rs
examples/with-column-resize/: Cargo.toml  Dioxus.toml
examples/with-column-resize/src/: main.rs
examples/with-custom-cells/: Cargo.toml  Dioxus.toml
examples/with-custom-cells/src/: main.rs
examples/with-selection/: Cargo.toml  Dioxus.toml
examples/with-selection/src/: main.rs
