[package]
name = "chorale-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Framework-agnostic core for the chorale table library: state, sort, filter, pagination, selection, virtualization. Zero UI deps. Inspired by TanStack Table."
readme = "../README.md"
keywords = ["table", "grid", "data-table", "headless", "virtualization"]
categories = ["gui", "data-structures"]

[lints]
workspace = true

[features]
default = []
# `rust_xlsxwriter`'s `wasm` feature swaps `std::time::SystemTime::now()`
# for `js_sys::Date::now()` so workbook timestamp metadata can be set
# under wasm32-unknown-unknown. Without it the writer panics with
# "time not implemented on this platform" the moment a consumer
# clicks Export Excel in a browser build (Zach reproduced
# 2026-06-06 in the qa-harness).
xlsx = ["dep:rust_xlsxwriter", "rust_xlsxwriter/wasm"]

[dependencies]
uuid = { version = "1", features = ["v4", "js"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
thiserror = "2"
rust_xlsxwriter = { version = "0.95", optional = true }
