[package]
name = "chorale-leptos"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Leptos adapter for the chorale table library. Renders `chorale-core::TableState` with virtualization, selection, and inline cell renderers."
readme = "../README.md"
keywords = ["table", "grid", "leptos", "headless", "virtualization"]
categories = ["gui"]

[lints]
workspace = true

[features]
default = []
xlsx = ["chorale-core/xlsx"]

[dependencies]
chorale-core = { path = "../chorale-core", version = "0.2.1" }
leptos = { version = "0.8", features = ["csr"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
  "Blob",
  "BlobPropertyBag",
  "Clipboard",
  "DataTransfer",
  "Document",
  "DomRect",
  "DragEvent",
  "Element",
  "Event",
  "EventTarget",
  "HtmlAnchorElement",
  "HtmlDivElement",
  "HtmlElement",
  "KeyboardEvent",
  "MouseEvent",
  "Navigator",
  "NodeList",
  "Url",
  "Window",
] }
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
js-sys = "0.3"
# Single-threaded wasm: lets non-Send JS handles (Closure, Document) ride
# inside leptos's Send + Sync `on_cleanup` closures. Same crate leptos uses
# internally for the same purpose.
send_wrapper = "0.6"
