[package]
name = "leptos-basic"
version.workspace = true
edition.workspace = true
publish = false

# Run with: trunk serve --open --package leptos-basic

[lints]
workspace = true

[dependencies]
chorale-core = { path = "../../chorale-core", version = "0.2.0" }
chorale-leptos = { path = "../../chorale-leptos", version = "0.2.0" }
leptos = { version = "0.8", features = ["csr"] }
