[package]
name = "leptos-qa-harness"
version.workspace = true
edition.workspace = true
publish = false

# Run with: trunk serve --open --package leptos-qa-harness

[lints]
workspace = true

[dependencies]
chorale-core = { path = "../../chorale-core", version = "0.2.0", features = ["xlsx"] }
chorale-leptos = { path = "../../chorale-leptos", version = "0.2.0", features = ["xlsx"] }
chorale-derive = { path = "../../chorale-derive", version = "0.2.0" }
leptos = { version = "0.8", features = ["csr"] }
# WASM target requires getrandom's `js` feature so the random source
# routes through `crypto.getRandomValues()` in the browser. Without
# this, wasm32-unknown-unknown builds fail with "the wasm*-unknown-
# unknown targets are not supported by default" — uuid (used by
# chorale-core's RowId) transitively pulls in getrandom 0.2 without
# the js feature. Declaring it directly here unifies the feature set.
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
chrono = "0.4"
