[package]
name = "virtualized-1m-rows"
version.workspace = true
edition.workspace = true
publish = false

# Run with: dx serve --package virtualized-1m-rows
#
# Initial load takes ~1-2 seconds in WASM while 1,000,000 RowId UUIDs
# generate. Subsequent scrolling, pagination, and Go-to-page interaction
# are O(1) per event. Sort and filter are intentionally disabled in this
# example: each currently re-clones the row Vec on every state change
# (the v0.2 fine-grained-reactivity residual noted in the README), and
# even at 1M rows the per-scroll re-clone is noticeable.

[lints]
workspace = true

[dependencies]
chorale-core = { path = "../../chorale-core", version = "0.1.0" }
chorale-dioxus = { path = "../../chorale-dioxus", version = "0.1.0" }
dioxus = { version = "0.7", features = ["web"] }
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
