[package]
name = "with-custom-cells"
version.workspace = true
edition.workspace = true
publish = false

# Run with: dx serve --package with-custom-cells

[lints]
workspace = true

[dependencies]
chorale-core = { path = "../../chorale-core", version = "0.1.0" }
chorale-dioxus = { path = "../../chorale-dioxus", version = "0.1.0" }
dioxus = { version = "0.7", features = ["web"] }
getrandom = { version = "0.2", features = ["js"] }
